# Arxiv-paper-curator-Rag

./: Makefile  README.md  compose.yml  main.py  pyproject.toml
airflow/: Dockerfile  entrypoint.sh  pyproject.toml
airflow/dags/: hello_world.py
noteboks/: main.py  pyproject.toml
src/: congif.py  pyproject.toml
test/: pyproject.toml
