[project]
name = "arxiv-paper-curator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.5"
dependencies = [
    "airflow",
    "src",
]

[tool.uv.workspace]
members = [
    "src",
    "noteboks",
    "test",
    "airflow",
    "arirflow",
]

[tool.uv.sources]
src = { workspace = true }
airflow = { workspace = true }
