[project]
name = "arxiv-paper-curator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.5"
dependencies = [
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "ruff>=0.12.9",
    "src",
]

[tool.uv.workspace]
members = [
    "src",
    "noteboks",
    "test",
    "airflow",
    "arirflow",
]

[tool.uv.sources]
src = { workspace = true }
